Fix PaginatedTable misaligned page number input.

--- a/src/components/PaginatedTable/PaginatedTable.styl
+++ b/src/components/PaginatedTable/PaginatedTable.styl
@@ -104,15 +104,16 @@
         margin-top: 1rem;
 
         .left {
-            display: inline-block;
+            display: flex;
             flex:1;
+            align-items: center;
             input {
                 //font-size: 0.7em;
                 padding: 0;
                 width: 2rem;
-                text-align: left;
+                text-align: right;
                 border: 0;
-                margin-left: 0.5rem;
+                margin-right: 0.5rem;
                 //border-bottom: 1px solid;
                 //background-color: transparent;
                 //themed color fg
